azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-9.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..13
      Directive@0..13
        DirectiveToken@0..1 "%"
        TagDirective@1..13
          DirectiveName@1..4 "TAG"
          InlineSeparator@4..5 " "
          TagToken@5..6 "!"
          NamedTagHandle@6..9 "foo"
          Error@9..9 ""
          InlineSeparator@9..10 " "
          TagPrefix@10..13 "bar"
    ,
    errors: [
        Diagnostic {
            span: 9..9,
            severity: Error,
            message: "invalid tag handle: expected '!'",
        },
    ],
}
