azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-12.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..6
      VerbatimTagStart@0..2 "!<"
      VerbatimTag@2..6 "!foo"
      Error@6..6 ""
    ,
    errors: [
        Diagnostic {
            span: 6..6,
            severity: Error,
            message: "expected '>'",
        },
    ],
}
