azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-16.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..5
      TagProperty@0..5
        TagToken@0..1 "!"
        NamedTagHandle@1..4 "foo"
        TagToken@4..5 "!"
        Error@5..5 ""
    ,
    errors: [
        Diagnostic {
            span: 5..5,
            severity: Error,
            message: "expected tag suffix",
        },
    ],
}
