azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-17.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..3
      TagProperty@0..3
        TagToken@0..1 "!"
        Error@1..2 "~"
        TagToken@2..3 "!"
        Error@3..3 ""
    ,
    errors: [
        Diagnostic {
            span: 1..2,
            severity: Error,
            message: "invalid character in tag handle",
        },
        Diagnostic {
            span: 3..3,
            severity: Error,
            message: "expected tag suffix",
        },
    ],
}
