azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-8.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..3
      VerbatimTagStart@0..2 "!<"
      Error@2..3 ">"
    ,
    errors: [
        Diagnostic {
            span: 2..3,
            severity: Error,
            message: "invalid verbatim tag character",
        },
    ],
}
