azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__yaml_directive-13.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..26
      Directive@0..26
        DirectiveToken@0..1 "%"
        YamlDirective@1..13
          DirectiveName@1..5 "YAML"
          InlineSeparator@5..6 " "
          YamlVersion@6..13 "100.200"
        InlineSeparator@13..14 " "
        Error@14..26 "foo #comment"
    ,
    errors: [
        Diagnostic {
            span: 14..26,
            severity: Error,
            message: "expected end of line",
        },
    ],
}
