azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__yaml_directive-5.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..14
      Directive@0..14
        DirectiveToken@0..1 "%"
        YamlDirective@1..14
          DirectiveName@1..5 "YAML"
          InlineSeparator@5..6 " "
          Error@6..14 "#comment"
    ,
    errors: [
        Diagnostic {
            span: 6..14,
            severity: Error,
            message: "invalid YAML version: expected digit",
        },
    ],
}
